--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
     </head>
 
     <body>
+        <!-- Grey with black text -->
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+            <a class="navbar-brand" href="#">Michael Boulos</a>
+            <ul class="navbar-nav nav-fill w-100 ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#about">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#projects">Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#daily-coding-problem">Daily Coding Problem</a>
+                </li>
+            </ul>
+        </nav>
         <h1 style="text-align: center">Hello World!</h1>
     </body>
 </html>
