Routing to html folder

--- a/index.html
+++ b/index.html
@@ -22,15 +22,18 @@
         <!-- Grey with black text -->
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
             <a class="navbar-brand" href="#">Michael Boulos</a>
-            <ul class="navbar-nav nav-fill w-100 ml-auto">
+            <ul class="navbar-nav nav-fill w-50 ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#about">About</a>
+                    <a class="nav-link" href="html/resume.html">Resume</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#projects">Projects</a>
+                    <a class="nav-link" href="html/projects.html">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#daily-coding-problem">Daily Coding Problem</a>
+                    <a class="nav-link" href="html/daily-coding-problem.html">Daily Coding Problem</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="html/contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
